# anki-cards-cli

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  words_2025-12-30.txt  words_2026-01-04.txt
backend/dictionary/: __init__.py  base.py  base_service.py
backend/dictionary/base/: dictionary.py  service.py
backend/dictionary/cambridge/: __init__.py  model.py  service.py
backend/dictionary/en/en/: cambridge.py
backend/dictionary/en/en/cambridge/: __init__.py  service.py
backend/dictionary/en/en/merriam_webster/: __init__.py
backend/dictionary/merriam_webster/: __init__.py  model.py
backend/service/: __init__.py  base.py
backend/service/en/en/: __init__.py
frontend/: cli.py
src/dictionaries/: __init__.py  base.py  cambridge.py  cambridge_dict.py
src/model/: entry.py
src/models/: word_entry.py
src/service/: base.py
src/service/en/en/: __init__.py
src/services/: __init__.py  base.py  en_to_en.py
src/services/en/: to_en.py
src/services/en/en/: en_to_en.py
tests/: test_dictionary.py
