[project]
name = "testdeckmaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "lxml>=6.0.2",
    "pronouncing>=0.2.0",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "ruff>=0.14.0",
    "setuptools<81",
]
