[project]
name = "name"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "lxml>=6.0.2",
    "pre-commit>=4.5.1",
    "pronouncing>=0.2.0",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "ruff>=0.14.10",
    "setuptools<81",
]
